import javax.imageio.ImageIO
import org.gradle.api.tasks.testing.logging.TestExceptionFormat
import org.gradle.api.tasks.testing.logging.TestLogEvent
import org.openstreetmap.josm.plugins.scripting.CheckDownloadUrlsInManifestTask
import org.openstreetmap.josm.plugins.scripting.build.GraalVMDownloadTask
import org.openstreetmap.josm.plugins.scripting.build.Releases
import org.openstreetmap.josm.plugins.scripting.release.CreateGithubReleaseTask
import org.openstreetmap.josm.plugins.scripting.release.PublishToAwsS3Task
import org.openstreetmap.josm.plugins.scripting.release.ShowPublishedPluginTask
import java.nio.file.Files
import java.nio.file.Paths
import java.nio.file.StandardCopyOption
import java.time.ZonedDateTime
import java.time.format.DateTimeFormatter

plugins {
    id 'java'
    id 'groovy'
    id 'eclipse'
}

repositories {
    mavenLocal()
    mavenCentral()
}

configurations {
    graalvm
    packIntoJar
}

dependencies {

    implementation group: 'org.apache.groovy', name: 'groovy-all', version: project.property('dep.groovy')
    implementation group: 'javax.activation', name: 'activation', version: '1.1.1'

    implementation group: 'com.github.spullara.mustache.java', name: 'compiler', version: project.property('dep.mustache')
    implementation group: 'com.fifesoft', name: 'rsyntaxtextarea', version: project.property("dep.rsyntaxtextarea")
    implementation group: 'org.apache.commons', name: 'commons-compress', version: project.property("dep.commons-compress")
    implementation group: 'javax.validation', name: 'validation-api', version: '1.0.0.GA'
    implementation group: 'javax.activation', name: 'activation', version: '1.1.1'
    implementation group: 'com.github.spullara.mustache.java', name: 'compiler', version: project.property('dep.mustache')
    implementation group: 'com.fifesoft', name: 'rsyntaxtextarea', version: project.property("dep.rsyntaxtextarea")
    implementation group: 'org.apache.commons', name: 'commons-compress', version: project.property("dep.commons-compress")

    // graalvm
    implementation group: 'org.graalvm.sdk', name: 'graal-sdk', version:  project.property("dep.graalvm-sdk")
    implementation group: 'org.graalvm.truffle', name: 'truffle-api', version:  project.property("dep.graalvm-sdk")
    implementation group: 'org.graalvm.js', name: 'js', version:  project.property("dep.graalvm-sdk")
    graalvm group: 'org.graalvm.sdk', name: 'graal-sdk', version:  project.property("dep.graalvm-sdk")
    graalvm group: 'org.graalvm.truffle', name: 'truffle-api', version:  project.property("dep.graalvm-sdk")
    graalvm group: 'org.graalvm.js', name: 'js', version:  project.property("dep.graalvm-sdk")

    packIntoJar group: 'javax.validation', name: 'validation-api', version: '1.0.0.GA'
    packIntoJar group: 'javax.activation', name: 'activation', version: '1.1.1'
    packIntoJar group: 'com.github.spullara.mustache.java', name: 'compiler', version: project.property('dep.mustache')
    packIntoJar group: 'com.fifesoft', name: 'rsyntaxtextarea', version: project.property("dep.rsyntaxtextarea")
    packIntoJar group: 'org.apache.commons', name: 'commons-compress', version: project.property("dep.commons-compress")

    implementation files("software/josm/josm-latest.jar")

    testImplementation files("software/josm/josm-unittest.jar")
    testImplementation group: 'org.jmockit', name: 'jmockit', version: project.property("dep.jmockit")
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: project.property('dep.jupiter')
    testImplementation group: 'org.apache.groovy', name: 'groovy-all', version: project.property('dep.groovy')
    testImplementation group: 'org.apache.groovy', name: 'groovy-test', version: project.property('dep.groovy')

    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: project.property('dep.jupiter')
    testRuntimeOnly group: "org.python", name: "jython", version: project.property('dep.jython')
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

def releases = Releases.fromFile(file("releases.yml"))

def deriveJosmCompileVersion(releases) {
    final value = project.hasProperty("plugin.josmCompileVersion")
        ? project.property("plugin.josmCompileVersion")
        : null
    def josmCompileVersion
    //noinspection GroovyFallthrough
    switch (value) {
        case null:
            josmCompileVersion = "latest"
            break
        case "latest":
        case "tested":
            josmCompileVersion = value
            break
        case "release":
            josmCompileVersion = releases.getLastCompatibleJosmVersion()
            break
        default:
            josmCompileVersion = value.isInteger() ? value as Integer : "latest"
    }
    return josmCompileVersion
}

def configuredJosmCompileVersion = deriveJosmCompileVersion(releases)
logger.info("Compiling for JOSM ${configuredJosmCompileVersion}")

version = releases.currentPluginLabel
base {
    archivesName = "scripting"
}

tasks.register('dumpGraalVMJars') {
    doLast {
        println "GRAALVM_CLASS_PATH=" + configurations.graalvm.asPath
    }
}

tasks.named('jar') {
    archiveBaseName = "scripting"
    archiveVersion = "" // omit version in the generated jar
    // pack class files and LICESNSES of dependencies into the target jar
    configurations.packIntoJar.each { dep ->
        from(zipTree(dep)) {
            eachFile { fcd ->
                if (fcd.path.startsWith("META-INF/LICENSE") || fcd.path.startsWith("META-INF/NOTICE")) {
                    def jarBaseName = dep.name.replaceAll(/\.jar$/, "")
                    fcd.path = fcd.path.replaceFirst("META-INF/", "META-INF/${jarBaseName}-")
                }
            }
        }
    }
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE

    // pack javascript source for API V2 into the target jar
    from("src/main/javascript/v3") {
        into("js/v3")
        include("**/*.js")
        include("**/*.mjs")
    }

    manifest {
        attributes("Plugin-Class": project.property("plugin.class"))
        attributes("Plugin-Link": project.property("plugin.link"))
        attributes("Plugin-Canloadatruntime": project.property("plugin.canloadatruntime"))
        attributes("Plugin-Date": ZonedDateTime.now().format(DateTimeFormatter.ISO_OFFSET_DATE_TIME))
        attributes("Plugin-Description": project.property("plugin.description"))
        attributes("Plugin-Early": project.property("plugin.early"))

        attributes("Plugin-Minium-Java-Version": "17")
        attributes("Plugin-Mainversion": releases.highestJosmVersion)
        attributes("Plugin-Version": releases.currentPluginLabel)

        // icon as data URL
        def iconFile = file("src/main/resources/images/script-engine.png")
        def dataUrl = "data:image/png;base64,${iconFile.bytes.encodeBase64()}"
        attributes("Plugin-Icon": dataUrl)

        // icon size
        def image = ImageIO.read(iconFile)
        def width = image.width
        def height = image.height
        attributes("Plugin-Icon-Size": "${width}x${height}")

        // download links
        // Old releases up to v0.2.0 have a numeric ID and are available as raw asset from the github repo.
        // Newer releases starting from v0.2.0 use semantic versioning and are available as asset from
        // a github release.
        releases.josmVersions.each {josmVersion ->
            final label = releases.highestPluginLabelForJosmVersion(josmVersion)
            final key = "${josmVersion}_Plugin-Url".toString()
            if (label.isNumber()) {
                final downloadUrl = new URL("https://raw.github.com/Gubaer/josm-scripting-plugin/for-josm-$josmVersion/dist/scripting.jar")
                attributes((key): "${label};${downloadUrl}")
            } else {
                final downloadUrl = new URL("https://github.com/Gubaer/josm-scripting-plugin/releases/download/$label/scripting.jar")
                attributes((key): "${label};${downloadUrl}")
            }
        }
        // already translated descriptions
        // TODO: should be handled by i18n infrastructure
        attributes("ast_Plugin-Description": "Executar scripts en JOSM")
        attributes("cs_Plugin-Description": "Spouští skripty v JOSM")
        attributes("de_Plugin-Description": "Führt Skripte in JOSM aus")
        attributes("el_Plugin-Description": "Εκτέλεση σεναρίων στο JOSM")
        attributes("es_Plugin-Description": "Ejecutar scripts en JOSM")
        attributes("fr_Plugin-Description": "Lancer les scripts dans JOSM")
        attributes("hu_Plugin-Description": "Parancsfájlok futtatása JOSM-ben")
        attributes("it_Plugin-Description": "Eseguire gli script in JOSM")
        attributes("ja_Plugin-Description": "JOSMでスクリプトを実行")
        attributes("ko_Plugin-Description": "JOSM 안에 스크립트 실행하기")
        attributes("lt_Plugin-Description": "Vykdo scenarijų JOSM")
        attributes("pl_Plugin-Description": "Uruchamiaj skrypty w JOSM")
        attributes("pt_Plugin-Description": "Executa script no JOSM")
        attributes("zh_CN_Plugin-Description": "在 JOSM 中运行脚本")
    }
}

compileJava {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
    options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation" << "-Werror"
}


/**
 * Replies the 'josm.home' directories used in tests
 */
File josmHomeForTests() {
    return new File(project.projectDir, "build/josm.home")
}

final JVM_ARGS = [
    '--add-opens', 'java.prefs/java.util.prefs=ALL-UNNAMED',
    '--add-exports', 'java.base/sun.security.action=ALL-UNNAMED',
    '--add-exports', 'java.desktop/com.sun.imageio.plugins.jpeg=ALL-UNNAMED',
    '--add-exports', 'java.desktop/com.sun.imageio.spi=ALL-UNNAMED'
]

/**
 * Run unit tests that only depend on the JDK, JOSM, and the plugin.
 * Runs on the current stock Java VM and JDK.
 */
test {
    useJUnitPlatform()
    jvmArgs JVM_ARGS
    environment "JOSM_SCRIPTING_PLUGIN_HOME", project.projectDir
    systemProperty "josm.home", josmHomeForTests().absolutePath
    scanForTestClasses = false
    include "org/openstreetmap/josm/plugins/scripting/js/**/*.class"
    include "org/openstreetmap/josm/plugins/scripting/model/*.class"
    include "org/openstreetmap/josm/plugins/scripting/preferences/graalvm/GraalVMPrivilegesModelTest.class"
    include "org/openstreetmap/josm/plugins/scripting/ui/console/*.class"
    include "org/openstreetmap/josm/plugins/scripting/esmodules/PathTests.class"
    testLogging.events TestLogEvent.FAILED, TestLogEvent.PASSED
}

def getGraalVMHome() {
    if (!project.hasProperty("graalvm.jdk")) {
        throw new GradleException("Missing mandatory project property 'graalvm.jdk'")
    }
    def jdk = project.property("graalvm.jdk")
    return new File(project.projectDir, "software/graalvm-$jdk")
}

def getGraalVMJavaExecutable() {
    return System.getProperty("os.name").toLowerCase(Locale.ENGLISH).contains("windows")
        ? new File(getGraalVMHome(), "bin/java.exe").absolutePath
        : new File(getGraalVMHome(), "bin/java").absolutePath
}

/**
 * Runs the API V2 JavaScript unit tests with JOSM and GraalJS
 * present. The tests are run with a GraalVM 'java' binary.
 */
tasks.register('testScriptApiV3', Test) {
    dependsOn "downloadGraalVM"
    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath
    useJUnitPlatform()
    jvmArgs JVM_ARGS
    environment "JOSM_SCRIPTING_PLUGIN_HOME", project.projectDir
    environment "TEST_COMMONJS_MODULE_REPO",
            "${project.projectDir}/src/test/resources/require/modules"
    environment "OSM_DEV_API_PASSWORD", System.getenv('OSM_DEV_API_PASSWORD')
    executable getGraalVMJavaExecutable()

    environment "JAVA_HOME", getGraalVMHome().absolutePath
    systemProperty "java.util.logging.config.file", "${project.projectDir}/src/test/resources/logging.properties"

    scanForTestClasses = false
    include "org/openstreetmap/josm/plugins/scripting/graalvm/api/*.class"
    testLogging {
        outputs.upToDateWhen { false }
        showStandardStreams = true
        events TestLogEvent.FAILED, TestLogEvent.PASSED
        exceptionFormat = TestExceptionFormat.FULL
    }
}

/**
 * Runs tests for functionality that tests whether GraalJS is
 * present or not. Runs with the current stock Java VM and JDK and makes
 * sure that GraalJS/GraalVM isn't present on the classpath.
 */
tasks.register('testGraalVMSupportNotPresent', Test) {
    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath.filter { !it.toString().toLowerCase().contains("graalvm") }
    useJUnitPlatform()
    jvmArgs JVM_ARGS
    scanForTestClasses = false
    include "**/graalvm/GraalVMNotPresentTest.class"
    testLogging {
        events TestLogEvent.FAILED, TestLogEvent.PASSED
        exceptionFormat = TestExceptionFormat.FULL
    }
}

/**
 * Run unit tests for GraalJS functionality. Run it with the GraalVM java
 * executable.
 */
tasks.register('testWithGraalVMJDK', Test) {
    dependsOn "downloadGraalVM"
    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath
    doFirst {
        // prepare a suitable 'preferences.xml' for the test cases in this
        // executed by this task
        def josmHome = josmHomeForTests()
        josmHome.mkdirs()
        Files.copy(
                Paths.get("${project.projectDir}/src/test/resources/josm-test-environments/env01/preferences.xml"),
                Paths.get("${josmHome.absolutePath}/preferences.xml"),
                StandardCopyOption.REPLACE_EXISTING
        )
    }
    useJUnitPlatform()
    jvmArgs JVM_ARGS
    environment "JOSM_SCRIPTING_PLUGIN_HOME", project.projectDir
    environment "TEST_COMMONJS_MODULE_REPO",
            "${project.projectDir}/src/test/resources/require/modules"
    systemProperty "josm.home", josmHomeForTests().absolutePath
    systemProperty "java.util.logging.config.file", "${project.projectDir}/src/test/resources/logging.properties"

    scanForTestClasses = false
    // configuration to use GraalVM
    executable getGraalVMJavaExecutable()
    environment "JAVA_HOME", getGraalVMHome()
    scanForTestClasses = false
    include "org/openstreetmap/josm/plugins/scripting/graalvm/with_graalvm/*.class"
    include "org/openstreetmap/josm/plugins/scripting/graalvm/esmodule/*.class"
    include "org/openstreetmap/josm/plugins/scripting/graalvm/*.class"

    exclude "org/openstreetmap/josm/plugins/scripting/graalvm/GraalVMNotPresentTest.class"
    include "org/openstreetmap/josm/plugins/scripting/esmodules/ESModuleUsageTest.class"
    testLogging {
        events TestLogEvent.FAILED, TestLogEvent.PASSED
        exceptionFormat = TestExceptionFormat.FULL
    }
}

/**
 * Run tests on a stock JDK with the groovy and python scripting
 * engines present.
 */
tasks.register('testJSR223EnginePresent', Test) {
    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath
    useJUnitPlatform()
    jvmArgs JVM_ARGS
    systemProperty "python.import.site", false
    environment "JYTHONPATH", ["/foo/bar/jythonpath1", "/foo/bar/jythonpath2"].join(File.pathSeparator)
    scanForTestClasses = false
    include "org/openstreetmap/josm/plugins/scripting/jsr223/*.class"
    testLogging {
        events TestLogEvent.FAILED, TestLogEvent.PASSED
        exceptionFormat = TestExceptionFormat.FULL
    }
}

tasks.named('check') {
    dependsOn tasks.named('testScriptApiV3')
    dependsOn tasks.named('testGraalVMSupportNotPresent')
    dependsOn tasks.named('testJSR223EnginePresent')
    dependsOn tasks.named('testWithGraalVMJDK')
}

sourceSets {
    test {
        java.srcDirs = [
            "src/test/unit/java",
            "src/test/functional/java",
            "src/test/common/java"
        ]
        groovy.srcDirs = [
            "src/test/unit/groovy",
            "src/test/functional/groovy"
        ]
    }
}
processResources {
  from "$projectDir/README.md"
  from "$projectDir/LICENSE"
}

tasks.register("downloadJosmJar") {
    def josmJar = file("software/josm/josm-latest.jar")
    def josmUnittestJar = file("software/josm/josm-unittest.jar")
    outputs.file(josmJar)
    outputs.file(josmUnittestJar)
    doLast {
        josmJar.parentFile.mkdirs()
        new URL("https://josm.openstreetmap.de/josm-latest.jar").withInputStream { is ->
            Files.copy(is, josmJar.toPath(), StandardCopyOption.REPLACE_EXISTING)
        }
        new URL("https://josm.openstreetmap.de/download/josm-unittest.jar").withInputStream { is ->
            Files.copy(is, josmUnittestJar.toPath(), StandardCopyOption.REPLACE_EXISTING)
        }
    }
}

compileJava.dependsOn("downloadJosmJar")
compileGroovy.dependsOn("downloadJosmJar")
compileTestJava.dependsOn("downloadJosmJar")
compileTestGroovy.dependsOn("downloadJosmJar")

tasks.register("downloadGraalVM", GraalVMDownloadTask)

tasks.register("checkDownloadUrls", CheckDownloadUrlsInManifestTask)

tasks.register("showPublishedPluginInfo", ShowPublishedPluginTask)

tasks.register("publishToAwsS3", PublishToAwsS3Task)

tasks.register("createGithubRelease", CreateGithubReleaseTask) {
    releaseTag = releases.currentPluginLabel
    releaseDescription = releases.currentReleaseDescription
}
